# retrieve-tailor-example

./: .gitignore  .pre-commit-config.yaml  README.md  example.md  pyproject.toml
src/retrieve_tailor_example/: __init__.py  agent.py  cli.py  document.py  models.py  scraper.py
src/retrieve_tailor_example/agents/: anthropic.py
src/retrieve_tailor_example/scrapers/: acrocon.py
src/retrieve_tailor_example/tasks/: classify.py  generate.py
src/retrieve_tailor_example/web/: app.py
src/retrieve_tailor_example/web/templates/: about.html  base.html  index.html
