[project]
name = "retrieve-tailor-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "anthropic>=0.79.0",
  "beautifulsoup4>=4.14.3",
  "fastapi>=0.115.0",
  "jinja2>=3.1.0",
  "pymupdf>=1.26.7",
  "python-dotenv>=1.2.1",
  "python-multipart>=0.0.7",
  "requests>=2.32.5",
  "rich>=14.3.2",
  "typer>=0.15.0",
  "uvicorn>=0.32.0"
]

[project.scripts]
retrieve-tailor-example = "retrieve_tailor_example.cli:main"
retrieve-tailor-web = "retrieve_tailor_example.web.app:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
